# PerceptionDLM

./: .gitignore  README.md  datasets.md  pyproject.toml  requirements.txt
VLMEvalKit/: commands.txt
VLMEvalKit/vlmeval/: __init__.py  config.py
VLMEvalKit/vlmeval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
VLMEvalKit/vlmeval/api/: gpt.py
VLMEvalKit/vlmeval/dataset/: image_mcq.py  video_dataset_config.py
VLMEvalKit/vlmeval/dataset/utils/: judge_util.py
VLMEvalKit/vlmeval/vlm/dmllm/: __init__.py  dmllm_chat.py  utils.py
VLMEvalKit/vlmeval/vlm/internvl/: internvl_chat.py
configs/dmllm/data_configs/s1/: honey_stage1_1M_datasets.yaml
configs/dmllm/data_configs/s2/: honey_stage2_14M_datasets.yaml
configs/dmllm/data_configs/s3/: llava_one_vision_datasets.yaml
configs/dmllm/data_configs/s4/: honey_15m_datasets.yaml
configs/dmllm/train_configs/s1/: train_s1.yaml
configs/dmllm/train_configs/s2/: train_s2.yaml
configs/dmllm/train_configs/s3/: train_s3.yaml
configs/dmllm/train_configs/s4/: train_s4.yaml
configs/envs/: deepspeed.yaml  default.yaml
configs/pdmllm/data_configs/: PerceptionDLM_datasets.yaml
configs/pdmllm/train_configs/: train.yaml
demo/: infer_dmllm.py  infer_pdmllm.py
demo/gradio/: app.py
evaluation/: README.md  judge.py
evaluation/DLCBench/: infer_mask_captions_dlc.py  serve_judge.sh
evaluation/ParaDLC-Bench/: eval_gpt_with_image.py  infer_mask_captions_paradlc.py
evaluation/ParaDLC-Bench/annotations/: annotations.json  class_names.json  qa.json
scripts/: convert.py  dmllm_multi_run.sh  export.py
smallvlm/: train.py
smallvlm/datasets/: collator.py  dataloaders_olg.py  datasets.py  multi_mask_datasets.py
smallvlm/datasets/database/: __init__.py  db.py  db_vqa.py  load.py  registry.py  utils.py
smallvlm/models/: __init__.py  build_models.py  build_processors.py  lora.py
smallvlm/models/dmllm/: cache.py  configuration_dmllm.py  generation_utils.py  modeling_dmllm.py  modeling_llada.py  processing_dmllm.py
smallvlm/models/pdmllm/: chat_template_utils.py  configuration_pdmllm.py  modeling_abstractor.py  modeling_llada.py  modeling_pdmllm.py  processing_pdmllm.py
smallvlm/trains/: __init__.py  trainer.py  trainer_callback.py  training_args.py  utils.py
smallvlm/utils/: loggings.py  model_utils.py
