[project]
name = "dmllm"
version = "0.1.0"
description = "PerceptionDLM"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.7.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "airportsdata==20250224",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.10.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "astor==0.8.1",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "av==15.1.0",
    "babel==2.17.0",
    "blake3==1.0.4",
    "bleach==6.3.0",
    "blessed==1.22.0",
    "Brotli==1.1.0",
    "brotlicffi",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "compressed-tensors==0.9.1",
    "configparser==7.2.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "DataProperty==1.1.0",
    "datasets==3.6.0",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "depyf==0.18.0",
    "dill==0.3.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "docstring_parser==0.17.0",
    "dotenv==0.9.9",
    "einops==0.8.1",
    "email_validator==2.2.0",
    "evaluate==0.4.5",
    "executing==2.2.1",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.7",
    "fastjsonschema==2.21.2",
    "fastrlock==0.8.3",
    "ffmpy==0.6.1",
    "filelock==3.13.1",
    "fire==0.7.1",
    "flash-attn==2.8.3",
    "flashinfer-python==0.3.1.post1",
    "flatbuffers",
    "fonttools==4.59.2",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "fsspec==2024.6.1",
    "gast",
    "gguf==0.10.0",
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "google-auth==2.40.3",
    "google-genai==1.31.0",
    "google-pasta",
    "gpustat==1.1.1",
    "gradio==5.42.0",
    "gradio_client==1.11.1",
    "groovy==0.1.2",
    "grpcio",
    "h11==0.16.0",
    "h5py",
    "hf-xet==1.1.9",
    "hf_transfer==0.1.9",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "ijson==3.4.0",
    "imageio==2.37.0",
    "importlib_metadata==8.6.1",
    "iniconfig==2.1.0",
    "interegular==0.3.3",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython_pygments_lexers==1.1.1",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "Jinja2==3.1.4",
    "jiter==0.9.0",
    "joblib==1.5.2",
    "json5==0.12.1",
    "json_repair==0.50.0",
    "jsonlines==4.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-console==6.6.3",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter_client==8.6.3",
    "jupyter_core==5.8.1",
    "jupyter_server==2.17.0",
    "jupyter_server_terminals==0.5.3",
    "jupyterlab==4.4.10",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.28.0",
    "jupyterlab_widgets==3.0.15",
    "keras",
    "kiwisolver==1.4.9",
    "lark==1.2.2",
    "lazy_loader==0.4",
    "libclang==18.1.1",
    "librosa==0.11.0",
    "liger_kernel==0.6.1",
    "llvmlite==0.44.0",
    "lm-format-enforcer==0.10.11",
    "lm_eval==0.4.9.1",
    "lxml==6.0.0",
    "Markdown",
    "markdown-it-py==4.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mbstrdecoder==1.1.4",
    "mdurl",
    "mistral_common==1.5.4",
    "mistune==3.1.4",
    "ml_dtypes",
    "modelscope==1.29.2",
    "more-itertools==10.7.0",
    "mpi4py",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "msgspec==0.19.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "namex",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "ninja==1.13.0",
    "nltk==3.9.1",
    "notebook==7.4.7",
    "notebook_shim==0.2.4",
    "numba==0.61.2",
    "numexpr==2.11.0",
    "numpy==2.0.0",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cudnn-frontend==1.15.0",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-ml-py==13.580.65",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "nvitop==1.5.3",
    "omegaconf==2.3.0",
    "openai==1.68.2",
    "opencv-python==4.12.0.88",
    "opencv-python-headless==4.11.0.86",
    "openpyxl==3.1.5",
    "opt-einsum",
    "optree",
    "orjson==3.11.3",
    "outlines==0.1.11",
    "outlines_core==0.1.26",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.2",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "partial-json-parser==0.2.1.1.post5",
    "pathvalidate==3.3.1",
    "peft==0.15.2",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.4.0",
    "pooch==1.8.2",
    "portalocker==3.2.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prometheus_client==0.21.1",
    "prompt_toolkit==3.0.52",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyaml==25.7.0",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pybind11==2.13.6",
    "pycountry==24.6.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pydub==0.25.1",
    "Pygments==2.19.2",
    "pynvml",
    "pyparsing==3.2.3",
    "PySocks",
    "pytablewriter==1.2.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "pyzmq==27.0.2",
    "qwen-vl-utils==0.0.11",
    "ray==2.40.0",
    "referencing==0.37.0",
    "regex==2025.9.1",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.1.0",
    "rich-toolkit==0.13.2",
    "rouge-score==0.1.2",
    "rpds-py==0.24.0",
    "rsa==4.9.1",
    "ruff==0.12.11",
    "sacrebleu==2.5.1",
    "safehttpx==0.1.6",
    "safetensors==0.5.3",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "semantic-version==2.10.0",
    "Send2Trash==1.8.3",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.36.0",
    "shellingham==1.5.4",
    "shtab==1.7.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "sqlitedict==2.1.0",
    "sse-starlette==3.0.2",
    "stack-data==0.6.3",
    "starlette==0.47.3",
    "sty==1.0.6",
    "sympy==1.13.3",
    "tabledata==1.3.4",
    "tabulate==0.9.0",
    "tcolorpy==0.1.7",
    "tenacity==9.1.2",
    "tensorboard==2.20.0",
    "tensorboard_data_server",
    "tensorboardX==2.6.4",
    "tensorflow==2.20.0",
    "termcolor==3.1.0",
    "terminado==0.18.1",
    "tf_keras==2.20.1",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "timeout-decorator==0.5.0",
    "timm==1.0.19",
    "tinycss2==1.4.0",
    "tomlkit==0.13.3",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "tqdm-multiprocess==0.0.11",
    "traitlets==5.14.3",
    "transformers==4.51.3",
    "triton==3.4.0",
    "typepy==1.3.4",
    "typer==0.17.3",
    "typing_extensions==4.12.2",
    "tyro==0.8.14",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uv==0.9.5",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "validators==0.35.0",
    "wandb==0.21.3",
    "watchfiles==1.0.4",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "Werkzeug",
    "widgetsnbextension==4.0.14",
    "word2number==1.1",
    "wrapt==1.17.0",
    "xformers==0.0.32.post2",
    "xgrammar==0.1.11",
    "xlsxwriter==3.2.5",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.21.0",
    "zstandard==0.24.0",
    "pillow==11.0.0",
    "pycocotools",
    "ipdb"
]

[project.optional-dependencies]
dmllm = [
  "deepspeed==0.17.1",
]
pdmllm = [
  "deepspeed==0.16.9",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
link-mode = "copy"
conflicts = [
    [
      { extra = "dmllm" },
      { extra = "pdmllm" },
    ],
]

[tool.uv.pip]
extra-index-url = [
    "https://download.pytorch.org/whl/cu128"
]
index-strategy = "unsafe-best-match"

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.8.3"
requires-dist = ["torch", "einops"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
